# E-commerce-OLTP-system

./: README.md
Creat_sample_by_faker/: brand.py  category.py  main.py  order_item.py  product.py  promotion.py  promotion_product.py  script.py  seller.py
SQL_Optimization/: Copy data from original tables  Indexes on partitioned tables  Partitioned table: order_item_partitioned  Partitioned table: orders_partitioned  Q1. Total revenue per month  Q2. Orders filtered by seller and date  Q3. Filter order_item by product_id  Q4. Find order with highest total_amount  Q5. List products with highest quantity sold  Q6. Orders by Seller in October  Q7. Revenue per Product per Month  Q8. Products Sold per Seller  README.docx  REPORT 1: Monthly Revenue Report  REPORT 2: Daily Revenue Report  REPORT 3: Seller Performance Report  REPORT 4: Top Products per Brand  REPORT 5: Orders Status Summary  generate_orders.py
poetry/: pyproject.toml
